--- a/style.css
+++ b/style.css
@@ -27,11 +27,15 @@ body {
     display: flex;
 }
 
-#column {
+.column {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .square {
     border: solid 1px black;
+    flex: 1;
 }
 
 
